--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+v1.0.3:
+    1. add middleware sub_filter.
+
+    1. 添加中间件sub_filter.
+
 v1.0.2:
     1. add config module
     2. add c_header middleware for custom header of req and resp
